--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="login">Log in</string>
     <string name="connection_error">A connection error has occurred</string>
     <string name="required_field">This field is required</string>
+    <string name="drawer_open">drawer_open</string>
+    <string name="drawer_close">drawer_close</string>
 
     <!-- Create Account -->
     <string name="create_account">Create account</string>
@@ -27,5 +29,10 @@
     <!-- Transitions Strings -->
     <string name="transition_body">transition_body</string>
     <string name="transition_text">transition_text</string>
+
+    <!-- Home Activity -->
+    <string name="home_menu">Home</string>
+    <string name="settings">Settings</string>
+    <string name="log_out">Log out</string>
 
 </resources>
