Custom calendar added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,9 +29,12 @@
     <!-- Transitions Strings -->
     <string name="transition_body">transition_body</string>
     <string name="transition_text">transition_text</string>
+    <string name="transition_event">transition_event</string>
+    <string name="transition_event_toolbar">transition_event_toolbar</string>
 
     <!-- Home Activity -->
     <string name="home_menu">Home</string>
+    <string name="calendar_menu">My calendar</string>
     <string name="settings">Settings</string>
     <string name="log_out">Log out</string>
 
