--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,9 @@
     <string name="add_attendant">Add attendant</string>
     <string name="event_succesffuly_created">Event successfully created</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Invitations -->
+    <string name="you_ve_invited">You've been invited</string>
+    <string name="reject">Reject</string>
+    <string name="accept">Accept</string>
 
 </resources>
